Get the system compiling.
* Checkstyle ignores the module-info.java file because it just fails on it
* Gradle now passes the --enable-preview flag to the compile and test tasks correctly
* We cannot use the toolchain block because we need to specify source/release target along with --enable-preview
* Some libraries we use don't have module-info classes or automatic modules in their manifests, so Gradle puts them on the compile classpath instead of the module path. We revert this so we can use them as "modules" again.
* Swapped out Gson for Jackson in the main file
* Fixed JUnit test (though it does nothing anyway)